@@ -26,6 +26,7 @@
       <li><a href="turning-series.html">Turning series on/off</a></li>
       <li><a href="selection.html">Selection support and zooming</a> and <a href="zooming.html">zooming with overview</a></li>
       <li><a href="interacting.html">Interacting with the data points</a></li>
+      <li><a href="navigate.html">Panning and zooming</a> (with plugin)</li>
     </ul>
 
     <p>Some more esoteric features:</p>
